--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 body {
+  background: green;
+}
+.card {
+  display: inline-block;
+  background: white;
+  margin: auto;
+  height: 400px;
+  width: 250px;
 }
